--- a/test2.ipynb
+++ b/test2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,8 @@
     "from keras import regularizers\n",
     "from keras.callbacks import EarlyStopping,Callback\n",
     "import numpy as np\n",
-    "from ipywidgets import interact,interact_manual"
+    "from ipywidgets import interact,interact_manual\n",
+    "from IPython import display"
    ]
   },
   {
@@ -139,7 +140,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "68e3eabc1df84a46beda7c603e910e62",
+       "model_id": "8ef8f5dcf88a4bbda6c0c47e1e784bfe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -153,7 +154,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "45c14246d8164e22af4e1b664d2f2323",
+       "model_id": "b19623ff290947e5a476ad9a80201086",
        "version_major": 2,
        "version_minor": 0
       },
@@ -251,7 +252,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7520f00c3255458b996e0977856c9b14",
+       "model_id": "31fbf9f446834751b5a0d93b811d6b5d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -265,7 +266,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "03bdf853b00e42d4bcd6e21937c0289e",
+       "model_id": "321e4405a7a245cfa56975574b21a3ab",
        "version_major": 2,
        "version_minor": 0
       },
@@ -428,17 +429,21 @@
     "#nbi:hide_in\n",
     "def plot_performance():\n",
     "  \n",
-    "    try:\n",
-    "        fig = mp.figure()\n",
-    "        ax  = fig.add_subplot(111)\n",
     "\n",
     "        for i in range(0,np.array(Log.out_log).shape[0]-1):\n",
+    "            mp.plot(pl.randn(100))\n",
+    "            display.clear_output(wait=True)\n",
+    "            display.display(pl.gcf())\n",
+    "            time.sleep(1.0)\n",
+    "        \n",
+    "        \n",
     "            if i == 0:\n",
-    "                line1, = ax.plot(data.train_response.index,np.array(Log.out_log)[i], 'r-')\n",
-    "                line2, = ax.plot(data.train_response.index,data.train_response, 'b-')\n",
+    "                mp.plot(data.train_response.index,np.array(Log.out_log)[i])\n",
+    "                mp.plot(data.train_response.index,data.train_response)\n",
     "                mp.title('Training and Prediction')\n",
-    "                fig.canvas.draw()\n",
-    "                fig.canvas.flush_events()\n",
+    "                display.clear_output(wait=True)\n",
+    "                display.display(pl.gcf())\n",
+    "                time.sleep(1.0)\n",
     "            else:\n",
     "                mp.pause(1)\n",
     "                line1.set_ydata = np.array(Log.out_log)[i]\n",
@@ -467,8 +472,7 @@
     }
    ],
    "source": [
-    "import pylab as pl\n",
-    "from IPython import display\n",
+    "\n",
     "\n",
     "for i in range(10):\n",
     "    mp.plot(pl.randn(100))\n",
